# ASKAPTrigger

./: .gitignore  askaptrigger.py  pyproject.toml  readme.md  trigger_mwa.py  trigger_mwa_config.json
src/ASKAPTrigger/: ASKAPTriggerMWA.py  askap_trigger_config.json  askaptrigger.py  mwa_calibrator_coord.csv  setup.py  trigger_mwa_config.json
src/ASKAPTrigger/scripts/: askap_trigger_mwa.py  askaprunner.py
